--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -23,12 +23,14 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew assembleDebug
 
-    - name: Archive APK
+    - name: Archive APK into ZIP
       run: |
         mkdir -p output
         cp app/build/outputs/apk/debug/app-debug.apk output/
-    - name: Upload APK Artifact
+        zip -r output/app-debug.zip output/
+        
+    - name: Upload ZIP Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: app-debug-apk
-        path: output/app-debug.apk
+        name: app-debug-zip
+        path: output/app-debug.zip
